--- a/src/Components/SelectPic/SelectPic.css
+++ b/src/Components/SelectPic/SelectPic.css
@@ -3,10 +3,12 @@
     flex-direction: column;
     width: 25%;
     align-items: center;
+    border-right: solid white 1px;
+    padding-top: 5px;
 }
 
 button {
-    width: 80%;
+    width: 99%;
     border: none;
     color: white;
     background-color: black;
@@ -18,4 +20,5 @@ button {
 button:hover, button:focus {
     background-color: #383838;
     outline: none;
+    cursor: pointer;
 }
