--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -20,8 +20,13 @@
     justify-content: center;
 }
 
+h2 {
+    font-size: 32px;
+}
+
 h3 {
     padding: 0 40px;
+    font-size: 24px;
 }
 
 h3:hover {
